--- a/SSTWeb/Views/Account/Login.cshtml
+++ b/SSTWeb/Views/Account/Login.cshtml
@@ -22,6 +22,9 @@
                 </label>
             </div>
             <div class="form-group">
+                <a asp-action="ForgotPassword">Forgot Password</a>
+            </div>
+            <div class="form-group">
                 <input type="submit" value="Log In" class="btn btn-primary" />
             </div>
         </form>
@@ -29,5 +32,7 @@
 </div>
 
 @section Scripts {
-    @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
+    @{
+    await Html.RenderPartialAsync("_ValidationScriptsPartial");
+}
 }
