--- a/SSTWeb/Views/Account/Login.cshtml
+++ b/SSTWeb/Views/Account/Login.cshtml
@@ -1,39 +1,48 @@
 ﻿@model SSTWeb.Models.UserLoginModel
 
-<h1>Login Page</h1>
+<div class="container text-white">
+    <div class="row">
+        <div class="col-lg-7">
+        </div>
+        <div class="col-lg-4">
+            <form asp-action="Login">
+                <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+                <div>
+                    <div class="row">
+                        <label asp-for="UserName" class="control-label">Login</label>
+                        <input asp-for="UserName" class="form-control" />
+                        <span asp-validation-for="UserName" class="text-danger"></span>
+                    </div>
+                    <div class="row">
+                        <label asp-for="Password" class="control-label"></label>
+                        <input asp-for="Password" class="form-control" />
+                        <span asp-validation-for="Password" class="text-danger"></span>
+                    </div>
+                    <div class="row">
+                        <div class="col-md-1">
+                        </div>
+                        <div class="col-md-2">
+                            <input class="form-check-input" style="" asp-for="RememberMe" /> @Html.DisplayNameFor(model => model.RememberMe)
+                        </div>
+                        <div class="col-md-3">
+                        </div>
+                        <div class="col-md-6">
+                            <a asp-action="ForgotPassword">Forgot Password</a>
+                        </div>
+                    </div>
 
-<div class="row">
-    <div class="col-md-4">
-        <form asp-action="Login">
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <div class="form-group">
-                <label asp-for="UserName" class="control-label">Login</label>
-                <input asp-for="UserName" class="form-control" />
-                <span asp-validation-for="UserName" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Password" class="control-label"></label>
-                <input asp-for="Password" class="form-control" />
-                <span asp-validation-for="Password" class="text-danger"></span>
-            </div>
-            <div class="form-group form-check">
-                <label class="form-check-label">
-                    <input class="form-check-input" asp-for="RememberMe" /> @Html.DisplayNameFor(model => model.RememberMe)
-                </label>
-            </div>
-            <div class="form-group">
-                <a asp-action="ForgotPassword">Forgot Password</a>
-            </div>
-            <div class="form-group">
-                <input type="submit" value="Log In" class="btn btn-primary" />
-            </div>
-        </form>
+                    <div class="row float-right">
+                        <input type="submit" value="Log In" class="btn btn-primary" />
+                    </div>
+                </div>
+            </form>
+        </div>
     </div>
-    <partial name="_ExternalAuthentication" />
+    <div class="row">
+        <div class="col-lg-7">
+        </div>
+        <div class="col-lg-4">
+            <partial name="_ExternalAuthentication" />
+        </div>
+    </div>
 </div>
-
-@section Scripts {
-    @{
-    await Html.RenderPartialAsync("_ValidationScriptsPartial");
-}
-}
