--- a/SSTWeb/Views/Home/Index.cshtml
+++ b/SSTWeb/Views/Home/Index.cshtml
@@ -1,8 +1,11 @@
 ﻿@{
     ViewData["Title"] = "Home Page";
 }
-
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+<div class="col-lg-5 ml-auto">
+    <h1 class="text-white">Welcome!</h1>
+    <h4>in SoccerScoreTyper Community</h4>
+    <div class="text-center">
+        <p class="text-white">Application status: development</p>
+    </div>
 </div>
+
