--- a/SSTWeb/Views/Shared/_ExternalAuthentication.cshtml
+++ b/SSTWeb/Views/Shared/_ExternalAuthentication.cshtml
@@ -3,33 +3,35 @@
 
 @inject SignInManager<Typer> SignInManager
 
-<div class="col-md-4 offset-2">
-    <section>
-        <h4>Use different service for log in:</h4>
-        <hr />
-        @{
-            var providers = (await SignInManager.GetExternalAuthenticationSchemesAsync()).ToList();
-            if (!providers.Any())
-            {
-                <div>
+<div class="col-md-12">
+    <p></p>
+    <p>Use different service for log in:</p>
+    <hr />
+    @{
+        var providers = (await SignInManager.GetExternalAuthenticationSchemesAsync()).ToList();
+        if (!providers.Any())
+        {
+            <div>
+                <p style="">
+                    We couldn't find any external provider
+                </p>
+            </div>
+        }
+        else
+        {
+            <form asp-action="ExternalLogin" asp-route-returnurl="@ViewData["ReturnUrl"]" method="post" class="form-horizontal">
+               
+                <div class="col-md-12">
                     <p>
-                        We couldn't find any external provider
+                    
+                        @foreach (var provider in providers)
+                        {
+                            <input type="submit" class="loginBtn--@provider.Name.ToLower()" value="@provider.Name" name="provider"/>
+                        }
                     </p>
                 </div>
-            }
-            else
-            {
-                <form asp-action="ExternalLogin" asp-route-returnurl="@ViewData["ReturnUrl"]" method="post" class="form-horizontal">
-                    <div>
-                        <p>
-                            @foreach (var provider in providers)
-                            {
-                                <input type="submit" class="btn btn-info" value="@provider.Name" name="provider" />
-                            }
-                        </p>
-                    </div>
-                </form>
-            }
+            </form>
         }
-    </section>
+    }
+
 </div>
