--- a/SSTWeb/Views/Shared/_LoginPartial.cshtml
+++ b/SSTWeb/Views/Shared/_LoginPartial.cshtml
@@ -3,28 +3,24 @@
 @inject SignInManager<Typer> SignInManager
 @inject UserManager<Typer> UserManager
 
-<ul class="navbar-nav">
     @if (SignInManager.IsSignedIn(User))
     {
-        <li class="nav-item">
-            <a class="nav-link text-dark" asp-controller="Home" asp-action="Index" 
+        <li class="active">
+            <a class="nav-link" asp-controller="Home" asp-action="Index" 
                 title="Welcome">Welcome @User.Identity.Name!</a>
         </li>
-        <li class="nav-item">
+        <li class="active">
             <form class="form-inline" asp-controller="Account" asp-action="Logout">
-                <button type="submit" class="nav-link btn btn-link text-info">Logout</button>
+                <button type="submit" class="nav-link btn btn-link">Logout</button>
             </form>
         </li>
     }
     else
     {
-        <li class="nav-item">
-            <a class="nav-link text-dark" asp-controller="Account"
-                   asp-action="Login">Login</a>
+        <li class="active">
+            <a class="nav-link" asp-controller="Account" asp-action="Login">Login</a>
         </li>
-        <li class="nav-item">
-            <a class="nav-link text-dark" asp-controller="Account"
-               asp-action="Register">Register</a>
+        <li class="active">
+            <a class="nav-link" asp-controller="Account" asp-action="Register">Register</a>
         </li>
     }
-</ul>
