views updated to template

--- a/SSTWeb/Views/Account/ConfirmEmail.cshtml
+++ b/SSTWeb/Views/Account/ConfirmEmail.cshtml
@@ -1,6 +1,11 @@
-﻿<h1>ConfirmEmail</h1>
-<div>
-    <p>
-        Thank you for confirming your email.
-    </p>
+﻿<div class="container text-white">
+    <div class="row">
+        <div class="col-lg-7">
+        </div>
+        <div class="col-lg-4">
+            <p>Everything is ready!</p>
+            <h3>Thank you for confirming your email.</h3>
+            <h2>Welcome to our community of Typers</h2>
+        </div>
+    </div>
 </div>
