--- a/SSTWeb/Views/Account/ResetPasswordConfirmation.cshtml
+++ b/SSTWeb/Views/Account/ResetPasswordConfirmation.cshtml
@@ -1,4 +1,12 @@
-﻿<h1>ResetPasswordConfirmation</h1>
-<p>
-    Your password has been reset. Please <a asp-action="Login">click here to log in</a>.
-</p>
+﻿
+<div class="container text-white">
+    <div class="row">
+        <div class="col-lg-7">
+        </div>
+        <div class="col-lg-4">
+            <h3>
+                Your password has been reset. Please <a asp-action="Login">click here to log in</a>.
+            </h3>
+        </div>
+    </div>
+</div>
