--- a/SSTWeb/Views/Account/SuccessRegistration.cshtml
+++ b/SSTWeb/Views/Account/SuccessRegistration.cshtml
@@ -1,5 +1,13 @@
-﻿<h1>SuccessRegistration</h1>
-
-<p>
-    Please check your email for the verification action.
-</p>
+﻿<div class="container text-white">
+    <div class="row">
+        <div class="col-lg-7">
+        </div>
+        <div class="col-lg-4">
+            <h1>Registration Successful!</h1>
+            <p>Almost everything is ready...</p>
+            <h3>
+                Please check your email for the account verification action.
+            </h3>
+        </div>
+    </div>
+</div>
