--- a/SSTWeb/Views/Account/ForgotPasswordConfirmation.cshtml
+++ b/SSTWeb/Views/Account/ForgotPasswordConfirmation.cshtml
@@ -1,5 +1,14 @@
 ﻿@model SSTWeb.Models.ForgotPasswordModel
-<h1>ForgotPasswordConfirmation</h1>
-<p>
-    The link has been sent, please check your email to reset your password.
-</p>
+
+<div class="container text-white">
+    <div class="row">
+        <div class="col-lg-7">
+        </div>
+        <div class="col-lg-4">
+            <h2>You can now reset your password!</h2>
+            <p>
+                The link has been sent, please check your email to change your password.
+            </p>
+        </div>
+    </div>
+</div>
