--- a/SSTWeb/Views/Account/ResetPassword.cshtml
+++ b/SSTWeb/Views/Account/ResetPassword.cshtml
@@ -1,26 +1,29 @@
 ﻿@model SSTWeb.Models.ResetPasswordModel
-
-<h1>ResetPassword</h1>
-
-<div class="row">
-    <div class="col-md-4">
-        <form asp-action="ResetPassword">
-            <div asp-validation-summary="All" class="text-danger"></div>
-            <div class="form-group">
-                <label asp-for="Password" class="control-label"></label>
-                <input asp-for="Password" class="form-control" />
-                <span asp-validation-for="Password" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="ConfirmPassword" class="control-label"></label>
-                <input asp-for="ConfirmPassword" class="form-control" />
-                <span asp-validation-for="ConfirmPassword" class="text-danger"></span>
-            </div>
-            <input type="hidden" asp-for="Email" class="form-control" />
-            <input type="hidden" asp-for="Token" class="form-control" />
-            <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
-            </div>
-        </form>
+<div class="container text-white">
+    <div class="row">
+        <div class="col-lg-7">
+        </div>
+        <div class="col-lg-4">
+            <h3>Reset Password</h3>
+            <form asp-action="ResetPassword">
+                <div asp-validation-summary="All" class="text-danger"></div>
+                <div class="row">
+                    <label asp-for="Password" class="control-label"></label>
+                    <input asp-for="Password" class="form-control" />
+                    <span asp-validation-for="Password" class="text-danger"></span>
+                </div>
+                <div class="row">
+                    <label asp-for="ConfirmPassword" class="control-label"></label>
+                    <input asp-for="ConfirmPassword" class="form-control" />
+                    <span asp-validation-for="ConfirmPassword" class="text-danger"></span>
+                </div>
+                <input type="hidden" asp-for="Email" class="form-control" />
+                <input type="hidden" asp-for="Token" class="form-control" />
+                <p></p>
+                <div class="row float-right">
+                    <input type="submit" value="Create" class="btn btn-primary" />
+                </div>
+            </form>
+        </div>
     </div>
 </div>
